# multirobotSLAM-ses598-finalproject

./: .gitignore  .gitmodules  README_NOTES.md  analyze_metrics.py
multirobot_bringup/: package.xml  setup.py
multirobot_bringup/config/: slam_toolbox_params.yaml  turtlebot3_waffle_bridge_no_clock.yaml
multirobot_bringup/launch/: explore_controller.launch.py  explorer.launch.py  frontier_detector.launch.py  map_merger.launch.py  metrics_logger.launch.py  multirobot.launch.py  simulation_launch.py  slam_per_robot.launch.py  spawn_robot.launch.py
multirobot_bringup/multirobot_bringup/: explore_controller.py  explorer.py  frontier_detector.py  map_merger.py  metrics_logger.py
multirobot_bringup/worlds/: mars_exploration.sdf
